Added non-existent base layout test + modified custom output path test + updated expected output for command line positional arguments test

--- a/tests/expected/Command-Line-Positional-Arguments-Test.html
+++ b/tests/expected/Command-Line-Positional-Arguments-Test.html
@@ -39,13 +39,16 @@ Processing Functional Blocks...
 ...Functional Blocks Processed.
 Minifying HTML...
 Outputting File: tests\input\_includes\Command-Line-Positional-Arguments-Test-output\Command-Line-Positional-Arguments-Test-Example-File.html
+✓ Wrote 24 bytes → tests\input\_includes\Command-Line-Positional-Arguments-Test-output\Command-Line-Positional-Arguments-Test-Example-File.html.
 Processing redirection list...
 
 Minifying HTML...
 Outputting File: tests\input\_includes\Command-Line-Positional-Arguments-Test-output\/redirect/target/one\index.html
+✓ Wrote 514 bytes → tests\input\_includes\Command-Line-Positional-Arguments-Test-output\/redirect/target/one\index.html.
 Redirect generated for /redirect/target/one to /redirect/destination/one
 Minifying HTML...
 Outputting File: tests\input\_includes\Command-Line-Positional-Arguments-Test-output\/redirect/target/two\index.html
+✓ Wrote 514 bytes → tests\input\_includes\Command-Line-Positional-Arguments-Test-output\/redirect/target/two\index.html.
 Redirect generated for /redirect/target/two to /redirect/destination/two
 
 Redirection list processed!
@@ -71,6 +74,7 @@ Processing Functional Blocks...
 ...Functional Blocks Processed.
 Minifying HTML...
 Outputting File: tests\input\_includes\Command-Line-Positional-Arguments-Test-output\friendly-urls\index.html
+✓ Wrote 21 bytes → tests\input\_includes\Command-Line-Positional-Arguments-Test-output\friendly-urls\index.html.
 Processing HTML File: tests\input\_includes\Command-Line-Positional-Arguments-Test-source\preservation.html
 Processing MetaData PlaceHolders...
 Done.
@@ -79,9 +83,11 @@ Processing Functional Blocks...
 ...Functional Blocks Processed.
 Minifying HTML...
 Outputting File: tests\input\_includes\Command-Line-Positional-Arguments-Test-output\preservation.html
+✓ Wrote 377 bytes → tests\input\_includes\Command-Line-Positional-Arguments-Test-output\preservation.html.
 Minifying CSS File: tests\input\_includes\Command-Line-Positional-Arguments-Test-source\stylesheet.css
 Minifying CSS...
 Outputting File: tests\input\_includes\Command-Line-Positional-Arguments-Test-output\stylesheet.css
+✓ Wrote 91 bytes → tests\input\_includes\Command-Line-Positional-Arguments-Test-output\stylesheet.css.
 Done.
 
 END OUTPUT
